added covid-19 info to main page

--- a/index.html
+++ b/index.html
@@ -5,6 +5,21 @@ pagination:
 ---
 <!-- The main content area -->
 <div class="posts">
+<h1>Quick Situation Update</h1>
+
+<p>
+TUdo is temporarily closed for the public due to the pandemic 😷.
+</p>
+<p>
+Our outdated wordpress installation has decided to promote fake Viagra pills 💊 and is also temporarily closed. 
+</p>
+
+<p>We are trying to update you if the situation changes. <a href="{{ '/blackhole' | prepend: site.baseurl }}">Read more what you can do in the meantime</a></p>
+</div>
+
+<hr/>
+
+<div class="posts">
   <div class="grid-xlarge">
     <div class="posts__container" itemscope itemtype="http://schema.org/Blog" data-columns>
 
